add ingredients, recipe detail finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".Pantry.MyIngredientsActivity"></activity>
         <activity android:name=".Login.LoginActivity"></activity>
         <activity android:name=".Login.SignUpActivity"></activity>
+        <activity android:name=".Pantry.RecipeActivity"></activity>
+        <activity android:name=".Pantry.IngredientAddActivity"></activity>
     </application>
 
 </manifest>
